# bamush

./: .gitignore  CMakeLists.txt  README.md  ideas.txt
libs/: qt-prerel.cpp  qt-prerel.h
old-src/: command_handler-old.cpp  config_loader-old.cpp  config_parser-old.cpp  shell-old.cpp
src/command_handler/: command_handler.cpp  command_handler.h
src/config/: config_loader.cpp  config_loader.h  config_parser.cpp  config_parser.h
src/shell/: bamush  compile.sh  shell.cpp  shell.h
